# y2t

./: .gitignore  README.md  pyproject.toml
alfred/: y2t.alfredworkflow
tests/: conftest.py  test_y2t.py
y2t/: __init__.py
youtube-transcript-extractor/: pyproject.toml
